<resources>
    <string name="app_name">Blindspot</string>
    <string name="welcomeText">Welcome to Blindspot app.
        You can use this app to scan NFC tags from clothes and manage your own wardrobe.
        Each screen has a voice introduction and if you want you can disable it from the menu in each screen.
        Select Register or Login below.
    </string>

    <string name="registerText">Please register to the app by entering Name, Email and Password."
        You can select to stay connected below.
    </string>

    <string name="loginText">Please login to the app by entering Email and Password.
        You can select to stay connected below.
    </string>

    <string name="mainText">You can use the Scanner or manage your wardrobe.
        Select one of them below.
    </string>

    <string name="scannerText">You can use this screen to scan any cloth
        by attaching NFC tag to back of your phone.
        You can share the cloth with others after the scan by pressing the button below.
    </string>

    <string name="wardrobeText">You can handle your wardrobe from this screen.
        Attach the NFC tag of the cloth to add it to the wardrobe or to remove it from the wardrobe.
        You can filter the clothes by selecting a type from the dropdown list below.
    </string>

    <string name="nfcDisabled">NFC or Android Beam is not active.
        Select OPEN in the dialog to open NFC settings or select CANCEL to go back.</string>

    <string name="addOrRemove">Select ADD to add this item to your wardrobe or
        REMOVE to remove it from your wardrobe if it contains this item.
        Select CANCEL to go back.
    </string>

    <string name="emailAddress">tomer4u6@gmail.com</string>
    <string name="author">Author: Tomer Ben Ari</string>
    <string name="email">Email: tomer4u6@gmail.com</string>
    <string name="icon1">http://www.iconarchive.com/</string>
    <string name="icon2">https://www.pngwing.com/</string>
</resources>
